--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "express-react-views": "^0.11.0",
     "js-sha256": "^0.9.0",
+    "lodash": "^4.17.11",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "pg": "^7.9.0",
