--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fitness-tracker",
   "version": "1.0.0",
-  "description": "Let's make a cool new app called TWEEDR!! Not Twitter, geez...",
+  "description": "",
   "main": "index.js",
-  "start": "node index.js",
   "scripts": {
+  	"start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
